--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+.main{
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav{
+  background-color: rgba(0, 60, 255, 0.518);
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 12%;
+  padding: 5px;
+}
+.search{
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  align-items: center;}
+.search input{
+    width: 20rem;
+    height: 25px;
+    border-radius: 5%;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.right{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40%;
+}
+.right div{
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+}
+.right div:hover{
+  background-color: tomato;
+}
+.slider{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin:2rem ;
+  margin-left: 1rem;
+  perspective: 900px;
+}
+.slider img{
+  border: 5%;
+  border: 2px solid rgb(87, 87, 165) ;
+  transition: transform 0.3s ease;
+}
+.slider img:hover{
+  transform: translateZ(100px);
+  border: 2px solid yellow;
+}
+.slider2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  perspective: 800px;
+  width: 98%;
+  margin: 2rem;
+}
+.slider2 img{
+  border: 5%;
+  border: 2px solid rgb(87, 87, 165) ;
+  transition: transform 0.3s ease;
+}
+.slider2 img:hover{
+  transform: translateZ(100px);
+  border: 2px solid yellow;
+}
+.btn{
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: yellowgreen;
+  border-radius: 5%;
+  margin: 2rem;
+  border: 2px solid blue;
+}
+.img{
+  perspective: 800px;
+}
+.img img{
+  border: 5%;
+  border: 2px solid rgb(87, 87, 165) ;
+  transition: transform 0.3s ease;
+}
+.img img:hover{
+  transform: translateZ(100px);
+  border: 2px solid yellow;
+}
+.link{
+  text-decoration: none;
+  color:white
 }
